# kayahealth

./: .mergify.yml  .releaserc  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/helper/: install.sh
.github/workflows/: ci.yml  on_release.yml
healthcare/: hooks.py  modules.txt  patches.txt  setup.py  uninstall.py
healthcare/config/: desktop.py  docs.py
healthcare/healthcare/: utils.py
healthcare/healthcare/doctype/diagnostic_report/: diagnostic_report.html
healthcare/healthcare/doctype/lab_test/: test_lab_test.py
healthcare/healthcare/doctype/nursing_task/: test_nursing_task.py
healthcare/healthcare/doctype/observation/: observation.html  observation.py  test_observation.py
healthcare/healthcare/doctype/patient_history_settings/: patient_history_settings.py
healthcare/healthcare/workspace/healthcare/: healthcare.json
healthcare/patches/v15_0/: check_version_compatibility_with_frappe.py  create_patient_medical_records_for_observations.py
